@@ -2,6 +2,7 @@
 # Format: [package_name]@[new_version]
 
 agar@5.2.0
+darwin@6.0.0
 mcagar@6.0.0
 snooker@7.2.0
 sugar@7.1.0
